Doc/force-app/main/default/objects/Case/fields/PS_Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>PS_Estimated_Hours__c</fullName>
    <description>This field described the estimated work hours it takes to complete this engagement.</description>
    <label>PS Estimated Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>