Doc/force-app/main/default/objects/Case/fields/PSCase_Additional_Services__c.field-meta.xml
<CustomField>
    <fullName>PSCase_Additional_Services__c</fullName>
    <label>Additional Services</label>
    <length>255</length>
    <type>Text</type>
</CustomField>