Doc/force-app/main/default/objects/Case/fields/PSCase_Closing_Compl_Date__c.field-meta.xml
<CustomField>
    <fullName>PSCase_Closing_Compl_Date__c</fullName>
    <inlineHelpText>For All Projects: date project closing report sent</inlineHelpText>
    <label>Closing - Completion Date</label>
    <type>Date</type>
</CustomField>