Doc/force-app/main/default/objects/Case/fields/PSCase_Deployment_Review_By__c.field-meta.xml
<CustomField>
    <fullName>PSCase_Deployment_Review_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment Review By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>