Doc/force-app/main/default/objects/Case/fields/PSCase_Deployment_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>PSCase_Deployment_Review_Date__c</fullName>
    <label>Deployment Review Date</label>
    <type>Date</type>
</CustomField>