Doc/force-app/main/default/objects/Case/fields/PSCase_DMS_Security__c.field-meta.xml
<CustomField>
    <fullName>PSCase_DMS_Security__c</fullName>
    <label>DMS Security</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BizTalk</fullName>
            </value>
            <value>
                <fullName>iManage 8.x</fullName>
            </value>
            <value>
                <fullName>NetDocuments</fullName>
            </value>
            <value>
                <fullName>Open Text DM5</fullName>
            </value>
            <value>
                <fullName>Other DMS</fullName>
            </value>
            <value>
                <fullName>SharePoint 2007</fullName>
            </value>
            <value>
                <fullName>SharePoint 2010</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>