Doc/force-app/main/default/objects/Case/fields/PSCase_File_Share_Security__c.field-meta.xml
<CustomField>
    <fullName>PSCase_File_Share_Security__c</fullName>
    <label>File Share Security</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Windows Share</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>