Doc/force-app/main/default/objects/Case/fields/PSCase_Kickoff_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>PSCase_Kickoff_Meeting_Date__c</fullName>
    <label>Kickoff Meeting Date</label>
    <type>Date</type>
</CustomField>