Doc/force-app/main/default/objects/Case/fields/PSCase_Modules__c.field-meta.xml
<CustomField>
    <fullName>PSCase_Modules__c</fullName>
    <inlineHelpText>Acknowledgements (Acknowledgements / Acknowledge-to-Access Module) 
Attorney Portal
Contractor Walls
DEGs (Cross-border &amp; Local Rules) 
Insiders (Corporate and Capital Markets) 
MTM (Matter Team Manager)
PPP (People Places &amp; Printers)</inlineHelpText>
    <label>Modules</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acknowledgements</fullName>
            </value>
            <value>
                <fullName>Attorney Portal</fullName>
            </value>
            <value>
                <fullName>Contractor Walls</fullName>
            </value>
            <value>
                <fullName>DEGs</fullName>
            </value>
            <value>
                <fullName>Insiders</fullName>
            </value>
            <value>
                <fullName>MTM</fullName>
            </value>
            <value>
                <fullName>PPP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>