Doc/force-app/main/default/objects/Case/fields/PSCase_Overall_Health_Color__c.field-meta.xml
<CustomField>
    <fullName>PSCase_Overall_Health_Color__c</fullName>
    <formula>IF(AND(ISPICKVAL(PSCase_Overall_Health__c, &quot;Green&quot;)), IMAGE( &quot;/servlet/servlet.FileDownload?file=00P50000005vPYv&quot;, &quot;Green: Good&quot;), 
IF (AND(ISPICKVAL(PSCase_Overall_Health__c, &quot;Amber&quot;)) , IMAGE( &quot;/servlet/servlet.FileDownload?file=00P50000005vPZ5&quot;, &quot;Amber: Warning&quot;), 
IF (AND(ISPICKVAL(PSCase_Overall_Health__c, &quot;Red&quot;)), IMAGE( &quot;/servlet/servlet.FileDownload?file=00P50000005vPZ0&quot;, &quot;Red: Critical&quot;),null)))</formula>
    <label>Overall Health</label>
    <type>Text</type>
</CustomField>