Doc/force-app/main/default/objects/Case/fields/PSCase_Planning_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>PSCase_Planning_Completion_Date__c</fullName>
    <inlineHelpText>For CID: when 2hr IB training scheduled
For Others: when planning done &amp; ready to install</inlineHelpText>
    <label>Planning - Completion Date</label>
    <type>Date</type>
</CustomField>