Doc/force-app/main/default/objects/Case/fields/PSCase_Product_Detail__c.field-meta.xml
<CustomField>
    <fullName>PSCase_Product_Detail__c</fullName>
    <label>Product Detail</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wall Builder Standard</fullName>
            </value>
            <value>
                <fullName>Wall Builder for Memo Management</fullName>
            </value>
            <value>
                <fullName>Wall Builder for DM Security</fullName>
            </value>
            <value>
                <fullName>Wall Builder Upgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>