Doc/force-app/main/default/objects/Case/fields/PSCase_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>PSCase_Project_Type__c</fullName>
    <description>Identifies the type of Professional Services case.</description>
    <inlineHelpText>&quot;New Install&quot; criteria:
	- virgin customer
	- first installation of a product 
	- installation of AT for a WB customer. 
	- installation of WB for an  AT customer. 
	- phase 1 of cases matching above criteria; subsequent phases do not count.</inlineHelpText>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Install</fullName>
            </value>
            <value>
                <fullName>POC</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Bug Fix</fullName>
            </value>
            <value>
                <fullName>Extension</fullName>
            </value>
            <value>
                <fullName>Services Only</fullName>
            </value>
            <value>
                <fullName>VM Migration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>