Doc/force-app/main/default/objects/Case/fields/PSCase_SharePoint_Security__c.field-meta.xml
<CustomField>
    <fullName>PSCase_SharePoint_Security__c</fullName>
    <label>SharePoint Security</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sharepoint Client or Matter Sites</fullName>
            </value>
            <value>
                <fullName>Custom development with the WB API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>