Doc/force-app/main/default/objects/Case/fields/PSCase_TB_Workshop_Date__c.field-meta.xml
<CustomField>
    <fullName>PSCase_TB_Workshop_Date__c</fullName>
    <description>Adoption and Pilot Workshop Date</description>
    <inlineHelpText>Adoption and Pilot Workshop Date</inlineHelpText>
    <label>Workshop Date</label>
    <type>Date</type>
</CustomField>