Doc/force-app/main/default/objects/Case/fields/PSCase_Technical_Briefing_Date__c.field-meta.xml
<CustomField>
    <fullName>PSCase_Technical_Briefing_Date__c</fullName>
    <label>WB Admin Training Date</label>
    <type>Date</type>
</CustomField>