Doc/force-app/main/default/objects/Case/fields/PSCase_Testing_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>PSCase_Testing_Completion_Date__c</fullName>
    <inlineHelpText>For CID: when CID Agenda finalized
For TB: date IT sign off testing, ready for Pilot
For Others: when testing signed off &amp; ready to Go-Live</inlineHelpText>
    <label>Testing - Completion Date</label>
    <type>Date</type>
</CustomField>