Doc/force-app/main/default/objects/Case/fields/PSCase_Time_Billing_SM__c.field-meta.xml
<CustomField>
    <fullName>PSCase_Time_Billing_SM__c</fullName>
    <label>Financial SM</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aderant CMS</fullName>
            </value>
            <value>
                <fullName>Carpe Diem</fullName>
            </value>
            <value>
                <fullName>DTE</fullName>
            </value>
            <value>
                <fullName>DTE Axiom</fullName>
            </value>
            <value>
                <fullName>Elite</fullName>
            </value>
            <value>
                <fullName>TimeKM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>