Doc/force-app/main/default/objects/Case/fields/PSCase_WB_User_Training_Date__c.field-meta.xml
<CustomField>
    <fullName>PSCase_WB_User_Training_Date__c</fullName>
    <label>WB User Training Date</label>
    <type>Date</type>
</CustomField>