Doc/force-app/main/default/objects/Case/fields/PSCaseAT_DMS_Library_Count__c.field-meta.xml
<CustomField>
    <fullName>PSCaseAT_DMS_Library_Count__c</fullName>
    <label>DMS Library Count</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-5</fullName>
            </value>
            <value>
                <fullName>6-10</fullName>
            </value>
            <value>
                <fullName>11-15</fullName>
            </value>
            <value>
                <fullName>16-20</fullName>
            </value>
            <value>
                <fullName>21-25</fullName>
            </value>
            <value>
                <fullName>26+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>