Doc/force-app/main/default/objects/Case/fields/PSCaseAT_Install_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>PSCaseAT_Install_Complete_Date__c</fullName>
    <label>Install Complete Date</label>
    <type>Date</type>
</CustomField>