Doc/force-app/main/default/objects/Case/fields/PSCaseTB_Administrator_Training_Date__c.field-meta.xml
<CustomField>
    <fullName>PSCaseTB_Administrator_Training_Date__c</fullName>
    <label>Admin Training Date</label>
    <type>Date</type>
</CustomField>