Doc/force-app/main/default/objects/Case/fields/PSCaseTB_Exchange_Server__c.field-meta.xml
<CustomField>
    <fullName>PSCaseTB_Exchange_Server__c</fullName>
    <inlineHelpText>Select the Exchange Server version used in your organization from the drop-down list.</inlineHelpText>
    <label>Exchange Server</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exchange Server 2010/2007</fullName>
            </value>
            <value>
                <fullName>Exchange Server  2003</fullName>
            </value>
            <value>
                <fullName>Exchange Integration Not Required</fullName>
                <default>true</default>
                <label>Exchange Integration Not Required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>