Doc/force-app/main/default/objects/Case/fields/PSCaseTB_Number_of_unique_data_sources__c.field-meta.xml
<CustomField>
    <fullName>PSCaseTB_Number_of_unique_data_sources__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Specify the number of unique data sources for your phone system.</inlineHelpText>
    <label>Number of unique data sources</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>