Doc/force-app/main/default/objects/Case/fields/PSCaseTB_Select_Adobe_Acrobat_software__c.field-meta.xml
<CustomField>
    <fullName>PSCaseTB_Select_Adobe_Acrobat_software__c</fullName>
    <inlineHelpText>Select the Adobe Acrobat version used in your organization from the drop-down list.</inlineHelpText>
    <label>Select Adobe Acrobat software</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acrobat Standard/Professional X/9/8/7</fullName>
            </value>
            <value>
                <fullName>Other Adobe Acrobat software</fullName>
            </value>
            <value>
                <fullName>Adobe Acrobat not used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>