Doc/force-app/main/default/objects/Case/fields/PSCaseTB_Select_Adobe_Reader_software__c.field-meta.xml
<CustomField>
    <fullName>PSCaseTB_Select_Adobe_Reader_software__c</fullName>
    <inlineHelpText>Select the Adobe Reader version used in your organization from the drop-down list.</inlineHelpText>
    <label>Select Adobe Reader software</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adobe Reader X/9/8</fullName>
            </value>
            <value>
                <fullName>Other Adobe Reader software</fullName>
            </value>
            <value>
                <fullName>Adobe Reader not used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>