Doc/force-app/main/default/objects/Case/fields/PSCaseTB_Select_billing_system__c.field-meta.xml
<CustomField>
    <fullName>PSCaseTB_Select_billing_system__c</fullName>
    <inlineHelpText>Select your billing system from the drop-down list.</inlineHelpText>
    <label>Select billing system</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Elite Enterprise 3.x (MS SQL Server)</fullName>
            </value>
            <value>
                <fullName>Elite 3E</fullName>
            </value>
            <value>
                <fullName>Aderant Expert/CMS.NET billing system</fullName>
            </value>
            <value>
                <fullName>Rippe &amp; Kingston LMS</fullName>
            </value>
            <value>
                <fullName>Other billing system</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>