Doc/force-app/main/default/objects/Case/fields/PSCaseTB_Select_desktop_wp_software__c.field-meta.xml
<CustomField>
    <fullName>PSCaseTB_Select_desktop_wp_software__c</fullName>
    <inlineHelpText>Select the desktop word processing software used in your organization from the drop-down list.</inlineHelpText>
    <label>Select desktop word processing software</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Word 2010</fullName>
            </value>
            <value>
                <fullName>Word 2007</fullName>
            </value>
            <value>
                <fullName>Word 2003</fullName>
            </value>
            <value>
                <fullName>Other desktop word processing software</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>