Doc/force-app/main/default/objects/Case/fields/PSCaseTB_Select_Phone_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>PSCaseTB_Select_Phone_Data_Source__c</fullName>
    <inlineHelpText>If you will be integrating your phone systems with Time Builder, select the data source for your phone call data from the drop-down list.</inlineHelpText>
    <label>Select Phone Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cisco Call Manager 4/5/6/7/8</fullName>
            </value>
            <value>
                <fullName>Avaya with IP feed</fullName>
            </value>
            <value>
                <fullName>Client Provided Call Data - Text File</fullName>
            </value>
            <value>
                <fullName>Client Provided Call Data - SQL Database</fullName>
            </value>
            <value>
                <fullName>Call Data Retrieved from Cost Recovery System</fullName>
            </value>
            <value>
                <fullName>Phone Import Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>