Doc/force-app/main/default/objects/Case/fields/PSCaseTBPR_Pilot_end_date__c.field-meta.xml
<CustomField>
    <fullName>PSCaseTBPR_Pilot_end_date__c</fullName>
    <label>Pilot end date</label>
    <type>Date</type>
</CustomField>