Doc/force-app/main/default/objects/Case/fields/Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Number__c</fullName>
    <description>Generated purchase order number for cases that require a purchase order number</description>
    <displayFormat>PSSPRO{000000}</displayFormat>
    <label>Procurement Reference</label>
    <type>AutoNumber</type>
</CustomField>