Doc/force-app/main/default/objects/Case/fields/Quality_Issue_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Quality_Issue_Level_1__c</fullName>
    <description>Custom Field built according to BIZ-47763</description>
    <label>Quality Issue Level 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deal</fullName>
            </value>
            <value>
                <fullName>Incorrect SOW</fullName>
            </value>
            <value>
                <fullName>Incorrect MSSA</fullName>
            </value>
            <value>
                <fullName>System Error</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>