Doc/force-app/main/default/objects/Case/fields/Quote_Stage__c.field-meta.xml
<CustomField>
    <fullName>Quote_Stage__c</fullName>
    <description>Custom Formula Field built according to BIZ-47758</description>
    <formula>TEXT( Quote__r.Quote_Stage__c )</formula>
    <label>Quote Stage</label>
    <type>Text</type>
</CustomField>