Doc/force-app/main/default/objects/Case/fields/Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>Quote_Status__c</fullName>
    <description>Custom Formula Field built according to BIZ-47758</description>
    <formula>Quote__r.Case_Status__c</formula>
    <label>Quote Status</label>
    <type>Text</type>
</CustomField>