Doc/force-app/main/default/objects/Case/fields/RCA__c.field-meta.xml
<CustomField>
    <fullName>RCA__c</fullName>
    <inlineHelpText>Provide the full details of the root cause (Error stack, faulty service, rule logic etc...)</inlineHelpText>
    <label>RCA</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>