Doc/force-app/main/default/objects/Case/fields/Recorded__c.field-meta.xml
<CustomField>
    <fullName>Recorded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recorded</label>
    <type>Checkbox</type>
</CustomField>