Doc/force-app/main/default/objects/Case/fields/Replacement_Appliance_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Appliance_Ship_Date__c</fullName>
    <label>Replacement Appliance Ship Date</label>
    <type>Date</type>
</CustomField>