Doc/force-app/main/default/objects/Case/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>Custom Picklist Field Built according to BIZ-47763. Picklist Values added according to BIZ-48208</description>
    <label>Request Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deal Configuration</fullName>
            </value>
            <value>
                <fullName>Custom Language</fullName>
            </value>
            <value>
                <fullName>Account Governance</fullName>
            </value>
            <value>
                <fullName>MSSA Support</fullName>
            </value>
            <value>
                <fullName>Non-Standard Packaging</fullName>
            </value>
            <value>
                <fullName>Non-Standard T&amp;C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>