Doc/force-app/main/default/objects/Case/fields/Resource_Center_Used__c.field-meta.xml
<CustomField>
    <fullName>Resource_Center_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resource Center  Used</label>
    <type>Checkbox</type>
</CustomField>