Doc/force-app/main/default/objects/Case/fields/Returned_Appliance_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Returned_Appliance_Tracking_Number__c</fullName>
    <label>Returned Appliance Tracking Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>