Doc/force-app/main/default/objects/Case/fields/RMA_Number__c.field-meta.xml
<CustomField>
    <fullName>RMA_Number__c</fullName>
    <description>RMA Number to provide to customers</description>
    <formula>&quot;RMA&quot;  &amp;  CaseNumber</formula>
    <label>RMA Number</label>
    <type>Text</type>
</CustomField>