Doc/force-app/main/default/objects/Case/fields/Role_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Role_Project_Manager__c</fullName>
    <formula>&quot;Project Manager&quot;</formula>
    <label>Role: Project Manager</label>
    <type>Text</type>
</CustomField>