Doc/force-app/main/default/objects/Case/fields/Salesforce_Ticket_Priority__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Ticket_Priority__c</fullName>
    <label>Salesforce Ticket Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <color>#E27001</color>
                <label>A</label>
            </value>
            <value>
                <fullName>B</fullName>
                <color>#F3D904</color>
                <label>B</label>
            </value>
            <value>
                <fullName>C</fullName>
                <color>#66CCCC</color>
                <label>C</label>
            </value>
            <value>
                <fullName>D</fullName>
                <color>#3366FF</color>
                <label>D</label>
            </value>
            <value>
                <fullName>E</fullName>
                <color>#330099</color>
                <label>E</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>