Doc/force-app/main/default/objects/Case/fields/Scope_Changed_Dates_Missed__c.field-meta.xml
<CustomField>
    <fullName>Scope_Changed_Dates_Missed__c</fullName>
    <description>SC-000036</description>
    <inlineHelpText>Has the scope changed or will the target dates be missed?</inlineHelpText>
    <label>Scope Changed/Dates Missed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>