Doc/force-app/main/default/objects/Case/fields/SE_Implementation_Hours__c.field-meta.xml
<CustomField>
    <fullName>SE_Implementation_Hours__c</fullName>
    <label>SE Implementation Hours</label>
    <length>3</length>
    <type>Text</type>
</CustomField>