Doc/force-app/main/default/objects/Case/fields/SE_Training_Hours__c.field-meta.xml
<CustomField>
    <fullName>SE_Training_Hours__c</fullName>
    <label>SE Training Hours</label>
    <length>3</length>
    <type>Text</type>
</CustomField>