Doc/force-app/main/default/objects/Case/fields/Security_Query__c.field-meta.xml
<CustomField>
    <fullName>Security_Query__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Security Query</label>
    <type>Checkbox</type>
</CustomField>