Doc/force-app/main/default/objects/Case/fields/Segment_VP_Email__c.field-meta.xml
<CustomField>
    <fullName>Segment_VP_Email__c</fullName>
    <inlineHelpText>Segment VP that needs notifying on the Acute Situation Notifications</inlineHelpText>
    <label>Segment VP Email</label>
    <type>Email</type>
</CustomField>