Doc/force-app/main/default/objects/Case/fields/Send_Support_Survey__c.field-meta.xml
<CustomField>
    <fullName>Send_Support_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field which governs whether the Case Contact is surveyed.</description>
    <label>Send Support Survey</label>
    <type>Checkbox</type>
</CustomField>